corrected alignments

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -43,7 +43,7 @@ h2,
 .h2 {
   margin-top: 40px;
   font-family:'Source Sans Pro',Helvetica,Arial,sans-serif;
-  margin-bottom: 25px!important;
+  margin-bottom: 15px!important;
   font-size: 25px;
   font-weight: 800;
   line-height: 1.2631578947;
@@ -79,7 +79,6 @@ p {
   color: #183247;
   margin-top: 14px!important;
   margin-bottom: 14px!important;
-  line-height: 26.25px;
   font-family:'Source Sans Pro',Helvetica,Arial,sans-serif;
 }
 
